2016-07-06  Even Rouault <even.rouault@spatialys.com>

    * ogdi/include/ecs_util.h: upgrade OGDI_RELEASEDATE to 20160705
    * ogdi/c-api/server.c: fix memory leaks in error code paths of svr_CreateServer()
    * ogdi/c-api/ecsassoc.c: ecs_SetError(): display error message on stderr if memory
    allocation fails.
    * ogdi/driver/vrf/feature.c: add heuristics in vrf_get_ring_coords() to
    detect cycling topology of edges that lead to endless looping and eventually
    crashes. Be robust to memory allocation failures in various places, and
    properly cleanup allocated structures when returning.
    * ogdi/driver/vrf/object.c: implement ecs_SetErrorShouldStop() logic in
    the various _getNext.... methods
    * ogdi/driver/vrf/vrf.c: fix memory leaks in error code paths
    * vpflib/vpfread.c: index_pos(): no longer clamp index values to [1,table.nrows] but
    error out. read_new_row(): be robust to memory allocation failures.
    * vpflib/vpftable.c: vpf_open_table(): be robust to wrong nrows values for
    memory tables.

2016-07-04  Even Rouault <even.rouault@spatialys.com>

    * Error handling: Add a ecs_SetErrorShouldStop() function that can be
    used internally when the code is able to recover from an error. The user
    may decide if he wants to be resilient on errors by defining OGDI_STOP_ON_ERROR=NO 
    as environment variable (the default being YES: stop on error).
    Add a ecs_SetReportErrorFunction() method to install a custom callback that
    will be called when OGDI_STOP_ON_ERROR=YES so that the user code is still
    aware of errors that occured. If not defined, the error will be logged in stderr.
    * VPF: Avoid a missing fcs file in a coverage to prevent opening any
    coverage of the library (fix opening of DNC17/COA17A dataset) if
    OGDI_STOP_ON_ERROR=NO is defined as environment variable, and otherwise
    better report the error
    * VPF: _getNextObject / _getObject functions: validate the value of the tile_id